fixed dark mode highlighting

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,7 +1,21 @@
 body.dark-mode, 
-body.dark-mode main * {
+body.dark-mode main h1 span {
     background: rgb(45, 45, 45);
     color: #f5f5f5;
+}
+body.dark-mode a {
+    background: rgb(45, 45, 45);
+    color: #f5f5f5;
+}
+
+::selection, a:focus, a:hover {
+	background-color: #353535;
+	color: #fff;
+}
+
+body.dark-mode a:hover {
+	background-color: #f5f5f5;
+	color: rgb(45,45,90);
 }
 
 *,:after,:before {
@@ -85,10 +99,7 @@ a, body {
 	color: #3d3d60;
 }
 
-::selection, a:focus, a:hover {
-	background-color: #353535;
-	color: #fff;
-}
+
 
 .meta {
 	margin: 0 0 2.5rem;
